src/test/resources/entity_test/invalid/Employee8.entity
Employee8 {

 id:integer;
 
 name : string ;
 
 name : string ; // duplicated field
 name : long ;
 
} 